Fixed some display errors including misaligned error messages

--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -10,6 +10,7 @@ background-color: #0e1717;
   padding: 35px;
   padding-top: 50px;
   background-color: white;
+  border-radius: 5px;
 
   h3{
     font-weight: 500;
@@ -19,6 +20,10 @@ background-color: #0e1717;
 
 .alert {
   display: inline;
+  color: red;
+  font-size: 16px;
+  font-weight: 200;
+  text-shadow: 0px 0px 5px #ff4d4d;
 }
 
 .input {
@@ -37,6 +42,11 @@ background-color: #0e1717;
 .textarea {
   height: 1000px;
 }
+
+textarea.ng-invalid.ng-touched{
+    border-color: #FA787E;
+}
+
 
 .button {
   background-color: #88C470;
